maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: '(' expected but identifier found.
      if aBiscuit(x, y)
         ^ShortestPathMaze:23: error: ';' expected but ',' found.
  xBuggle, yBuggle = getX(), getY()
         ^ShortestPathMaze:60: error: ':' expected but ',' found.
def aMurEst(x, y)
             ^ShortestPathMaze:76: error: identifier expected but '}' found.
}
^